# tutorial-luizalabs-pybr2021

./: .editorconfig  .env.example  README.md  pyproject.toml
.github/workflows/: main.yml
orders/: api.py  exceptions.py  services.py
tests/: test_api.py
